# Project-Manager

./: .gitignore  README.md  __main__.py  example_template_engine.py  pyproject.toml  test_templates.py
src/: __init__.py
src/base_de_proyecto.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/cli/: commands.py
src/core/: base_templates.py  database.py  enhanced_template_manager.py  external_templates.py  native_renderers.py  structure_generator.py  template_loader.py
src/core/builders/: __init__.py
src/core/template_engine/: __init__.py  evaluator.py  functions.py  parser.py  renderer.py
src/templates/: __init__.py  cli.py  models.py  renderers.py
templates/: README.md  template_system_design.md
templates/docx/: advanced_business_document.json  business_document.json
templates/excel/: multi_sheet_dashboard.json
templates/html/: Professional Report.json  advanced_responsive_report.json
templates/md/: technical_documentation.json
templates/structures/: README.md  default_business_structure.json
templates/structures/content/: file_templates.json  folder_descriptions.json  template_functions.json
templates/xlsx/: Custom Excel Template.json  Multi-Sheet Dashboard.json
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_core.py  test_edge_cases.py  test_plan.md
tests/templates/: test_models.py
tests/test_data/: sample_structure.json
