[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-manager"
version = "0.1.0"
description = "Project Structure Manager for generating standardized business project folders"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pyinstaller>=6.16.0",
    "python-docx>=1.2.0",
    "markdown>=3.10.0",
    "markdown-pdf>=1.10",
    "imgkit>=1.2.3",
    "wkhtmltopdf>=0.2",
]

[project.scripts]
project-manager = "__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.pyinstaller]
main = "__main__.py"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
